# advent2019

./: README.md  adventofcode.cabal  christmas.cabal  default.nix  shell.nix
src/: day01.hs  day02.hs  day03.hs
test/: doctests.hs
